Update pom.xml to add Jetty 12 dependencies and streamline project configuration